InternexDev_Sandbox/src/objects/LoadWebCash__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <description>Batch Number - getting updated by a workflow</description>
        <label>Batch Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Amount__c</fullName>
        <description>Amount of the check received in the file</description>
        <label>Check Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <description>Check Number of the payment</description>
        <label>Check Number</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <label>Company Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Account__c</fullName>
        <defaultValue>&apos;-&apos;</defaultValue>
        <label>DD Account #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <label>Deposit Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Batch_Number__c</fullName>
        <label>File Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Number__c</fullName>
        <description>Unique number will be assigned to a file, that is uploaded</description>
        <displayFormat>WC-{000}</displayFormat>
        <label>File Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Invoice Amount for a Invoice number</description>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Invoice Number against a check number</description>
        <label>Invoice Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_key__c</fullName>
        <description>Used to store unique combination of each record in bank file.</description>
        <label>Load key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LockBox_Number__c</fullName>
        <defaultValue>&apos;-&apos;</defaultValue>
        <description>Lockbox number will be loaded from a file</description>
        <label>LockBox Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lockbox_Site__c</fullName>
        <defaultValue>&apos;-&apos;</defaultValue>
        <label>Lockbox Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remitter_Name__c</fullName>
        <label>Remitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transit_Routing__c</fullName>
        <defaultValue>&apos;-&apos;</defaultValue>
        <label>Transit Routing #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if record is processed already</description>
        <label>isProcessed</label>
        <type>Checkbox</type>
    </fields>
    <label>LoadWebCash</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Batch_Number__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Company_Number__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Lockbox_Site__c</columns>
        <columns>LockBox_Number__c</columns>
        <columns>Item_Number__c</columns>
        <columns>Check_Amount__c</columns>
        <columns>Check_Number__c</columns>
        <columns>Remitter_Name__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Load_key__c</columns>
        <columns>Transit_Routing__c</columns>
        <columns>DD_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LoadWebCashes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>